# docassemble-AssemblyLine

./: .bumpversion.cfg  .env.example  .env_example  .gitignore  CHANGELOG.md  DEMOGRAPHIC_FIELDS.md  LICENSE  MANIFEST.in  README.md  bumpversion.sh  fix_sessions_target_vars.patch  mypy.ini  package.json  pyproject.toml  run_test.py  run_test2.py  setup.py  test_debug.py  test_debug_3.py  test_out.txt  test_target_vars.py
.bumpscript/: .bumpversion.cfg  version_teams_msg.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/hooks/: pre-commit
.github/workflows/: black-action.yml  da_build.yml  deploy.yml  publish.yml  run_form_tests.yml  unittests.yml  valid_jinja2.yml  word_diff.yml
.history/docassemble/AssemblyLine/: al_document_20210721162137.py  al_document_20210721162419.py
docassemble/AssemblyLine/: __init__.py  al_courts.py  al_document.py  al_general.py  custom_jinja_filters.py  language.py  project_maintenance.py  requirements.txt  sessions.py  sign.py  test_al_document.py  test_al_general.py  test_all_imports.py  test_language.py  test_sessions.py
docassemble/AssemblyLine/data/questions/: al_code.yml  al_document.yml  al_email.yml  al_language.yml  al_package.yml  al_package_unstyled.yml  al_question_test.yml  al_reminders.yml  al_review_screen.yml  al_saved_sessions.yml  al_saved_sessions_store.yml  al_settings.yml  al_terms_of_use.yml  al_visual.yml  assembly_line.yml  assembly_line_unstyled.yml  demo_search_sessions.yml  feedback.yml  interview_list.yml  manage_sessions.yml  ql_baseline.yml  ql_catchall.yml  (+24 more)
(+45 files in other folders)
